unpackaged/main/default/objects/Moto_Service_Booking__c/Moto_Service_Booking__c.object-meta.xml
<CustomObject>
    <label>Service Booking</label>
    <nameField>
        <displayFormat>SB-{00000}</displayFormat>
        <label>Ref. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>