unpackaged/main/default/objects/Moto_Service_Booking__c/fields/Appointment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Appointment Date/Time</label>
    <type>DateTime</type>
</CustomField>