unpackaged/main/default/objects/Moto_Service_Booking__c/fields/Preferred_Location__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Location__c</fullName>
    <label>Preferred Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Al Quoz, Dubai</fullName>
            </value>
            <value>
                <fullName>Industrial Area 12, Sharjah</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>